--- a/Konvolucio.MCEL181123/Properties/Resources.resx
+++ b/Konvolucio.MCEL181123/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="Stop_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Stop_48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="adapter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\adapter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
