--- a/Konvolucio.MCEL181123/View/MainForm.resx
+++ b/Konvolucio.MCEL181123/View/MainForm.resx
@@ -150,4 +150,7 @@
   <metadata name="coulmnRunTimeTick.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="columnVersion.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
